--- a/StudyStreak.html
+++ b/StudyStreak.html
@@ -13,6 +13,11 @@
     <script src="./StudyStreak.js"></script>
 
 
+    
+<!--body>
+    home page:
+        leaderboard, points, completed tasks
+</body-->
 
  </body>
  
