--- a/StudyStreak.html
+++ b/StudyStreak.html
@@ -5,15 +5,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudyStreak</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./StudyStreakStyle.css">
 
 </head>
 
 <body>
     <script src="./StudyStreak.js"></script>
 
+    <div class="header"> 
+        <h1>StudyStreak</h1>
+        <p> Welcome! Join us and start your study streak today.</p>
+    </div>
+
+    <div class="topnav">
+        <a href="#" style="float: right"> Task Tracker </a>
+        <a href="#"> Leaderboard </a>
+        <a href="#"> Achievements </a>
+    </div>
+
+    <div style="margin: 50"> 
+        <h3 class="quote"> 
+            Earn points for the completion of goals and tasks. 
+            Capture your progress with achievements and badges. 
+        </h3>
+    </div>
+    <div style="margin-top: 70px;"> 
+        <div class="row">
+
+            <div class="column"> 
+
+                <h1> Study Hard. Earn Points. </h1>
+                <h1> Gain Achievements. </h1>
+                
+
+            <div class="column">
+                <h1> How do I earn achievements? </h1>
+                <p> Studying can feel like a personal game where each task you 
+                    complete earns you points toward your academic goals. Every time you hit 
+                    a study milestone—whether it's finishing a chapter, acing a practice quiz, 
+                    or completing a set of flashcards—you score points based on your effort and 
+                    consistency. These points represent the progress you're making, adding up over 
+                    time to unlock personal achievements. Maybe it's earning the title of "Master of 
+                    Math" after a tough week of problem sets or becoming the "Flashcard Champion" 
+                    for mastering vocabulary. By turning your study habits into a point-based system, 
+                    you create a fun and motivating way to visualize your accomplishments, pushing you 
+                    to reach the next level of success!</p>
+                <button class="button"> See My Achievements</button>
+            </div>
+        </div>
+        <div class="column">
+            <div style="margin-top: 50px;"> 
+                <h1> How do I keep my deadlines organized? </h1>
+                <p> Tracking tasks as a student is like having a trusty sidekick on 
+                    your academic adventure! It keeps you organized, helps you dodge 
+                    the dreaded deadline monster, and ensures you're always one step ahead.
+                    Imagine checking off assignments like a pro—each tick feels like leveling 
+                    up in your favorite game! Plus, it turns chaotic to-do lists into manageable 
+                    mini-missions, making your workload feel a lot less overwhelming. With a 
+                    little help from your task tracker, you can conquer projects, ace exams, 
+                    and still have time for some fun. So grab that planner or app and start 
+                    your quest to become the ultimate task-tracking hero! </p>
+                <button class="button"> See My Tasks</button>
+            </div>
+        </div>
+    </div>
+
+    
 
 
- </body>
+
+
+
+</body>
  
 </html>
