--- a/StudyStreak.html
+++ b/StudyStreak.html
@@ -35,6 +35,7 @@
             <div class="column"> 
 
                 <h1> Study Hard. Earn Points. Gain Achievements. </h1>
+                <table class="pointsToAchievements"> </table> 
 
             </div>
 
