points to acheivements table

--- a/StudyStreak.html
+++ b/StudyStreak.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="topnav">
-        <a href="#" style="float: right"> Task Tracker </a>
+        <a href="./TaskTracker.html" style="float: right"> Task Tracker </a>
         <a href="#"> Leaderboard </a>
         <a href="#"> Achievements </a>
     </div>
@@ -29,14 +29,49 @@
             Capture your progress with achievements and badges. 
         </h3>
     </div>
-    <div style="margin-top: 40px;"> 
+    <div style="margin-top: 30px;"> 
         <div class="row">
 
             <div class="column"> 
 
-                <h1> Study Hard. Earn Points. Gain Achievements. </h1>
-                <table class="pointsToAchievements"> </table> 
-
+                <h1> Study Hard. Collect Points. Earn Achievements. </h1>
+                <table class="pointsToAchievements"> 
+                    <tr> 
+                        <th> Achievements to Earn </th>
+                        <th> Task to complete </th>
+                        <th> Points to Collect </th>
+                    </tr>
+                    <tr> 
+                        <th> Goal Getter </th>
+                        <th> Set and acheive a weekly goal </th>
+                        <th> 70 </th>
+                    </tr>
+                    <tr> 
+                        <th> Time Traveler</th>
+                        <th> Study for 100 hours </th>
+                        <th> 100 </th>
+                    </tr>
+                    <tr> 
+                        <th> Quiz Whiz</th>
+                        <th> Score about 90% on three quizzes in a row </th>
+                        <th> 270 </th>
+                    </tr>
+                    <tr> 
+                        <th> Midnight Oil </th>
+                        <th> Complete a nighttime study session </th>
+                        <th> 12 </th>
+                    </tr>
+                    <tr> 
+                        <th> Challenge Accepted </th>
+                        <th> Finish a study challenge </th>
+                        <th> 222 </th>
+                    </tr>
+                    <tr> 
+                        <th> Caffine Crusader </th>
+                        <th> Go for 10 study hours caffine-free  </th>
+                        <th> 100 </th>
+                    </tr>
+                </table> 
             </div>
 
             <div class="column">
@@ -51,11 +86,11 @@
                     for mastering vocabulary. By turning your study habits into a point-based system, 
                     you create a fun and motivating way to visualize your accomplishments, pushing you 
                     to reach the next level of success!</p>
-                <button class="button"> See My Achievements</button>
+                <a class="button"> See My Achievements</a>
             </div>
         </div>
         <div class="column">
-            <div style="margin-top: 50px;"> 
+            <div style="margin-top: -20px;"> 
                 <h1> How do I keep my deadlines organized? </h1>
                 <p> Tracking tasks as a student is like having a trusty sidekick on 
                     your academic adventure! It keeps you organized, helps you dodge 
@@ -66,7 +101,7 @@
                     little help from your task tracker, you can conquer projects, ace exams, 
                     and still have time for some fun. So grab that planner or app and start 
                     your quest to become the ultimate task-tracking hero! </p>
-                <button class="button"> See My Tasks</button>
+                <a class="button" href="./TaskTracker.html"> See My Tasks</a>
             </div>
         </div>
     </div>
