--- a/StudyStreak.html
+++ b/StudyStreak.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./StudyStreakStyle.css">
 
 </head>
-
 <body>
     <script src="./StudyStreak.js"></script>
 
@@ -90,7 +89,7 @@
             </div>
         </div>
         <div class="column">
-            <div style="margin-top: -20px;"> 
+            <div style="margin-top: 10px;"> 
                 <h1> How do I keep my deadlines organized? </h1>
                 <p> Tracking tasks as a student is like having a trusty sidekick on 
                     your academic adventure! It keeps you organized, helps you dodge 
@@ -104,14 +103,7 @@
                 <a class="button" href="./TaskTracker.html"> See My Tasks</a>
             </div>
         </div>
+        <img src="./badges.jpg" width="500" style="margin-left: 30px;">
     </div>
-
-    
-
-
-
-
-
 </body>
- 
 </html>
