added the page links and table edits

--- a/StudyStreak.html
+++ b/StudyStreak.html
@@ -17,9 +17,9 @@
     </div>
 
     <div class="topnav">
-        <a href="./TaskTracker.html" style="float: right"> Task Tracker </a>
-        <a href="#"> Leaderboard </a>
-        <a href="#"> Achievements </a>
+        <a href="./TaskTracker.html"> My Task Tracker </a>
+        <!--a href="#"> Leaderboard </a-->
+        <a href="./Achievements.html" style="float: right"> My Achievements </a>
     </div>
 
     <div style="margin: 50"> 
@@ -32,50 +32,56 @@
         <div class="row">
 
             <div class="column"> 
+                <h1> Collect Points. Earn Achievements. </h1>
 
-                <h1> Study Hard. Collect Points. Earn Achievements. </h1>
-                <table class="pointsToAchievements"> 
+                <table id="pointsToAchievements"> 
                     <tr> 
                         <th> Achievements to Earn </th>
                         <th> Task to complete </th>
                         <th> Points to Collect </th>
                     </tr>
                     <tr> 
-                        <th> Goal Getter </th>
-                        <th> Set and acheive a weekly goal </th>
-                        <th> 70 </th>
+                        <td> Midnight Oil </td>
+                        <td> Complete a nighttime study session </td>
+                        <td> 12 </td>                        
+
                     </tr>
                     <tr> 
-                        <th> Time Traveler</th>
-                        <th> Study for 100 hours </th>
-                        <th> 100 </th>
+                        <td> Goal Getter </td>
+                        <td> Set and acheive a weekly goal </td>
+                        <td> 70 </td>
                     </tr>
                     <tr> 
-                        <th> Quiz Whiz</th>
-                        <th> Score about 90% on three quizzes in a row </th>
-                        <th> 270 </th>
+                        <td> Caffine Crusader </td>
+                        <td> Go for 10 study hours caffine-free  </td>
+                        <td> 100 </td>
+
                     </tr>
                     <tr> 
-                        <th> Midnight Oil </th>
-                        <th> Complete a nighttime study session </th>
-                        <th> 12 </th>
+                        <td> Challenge Accepted </td>
+                        <td> Finish a study challenge </td>
+                        <td> 222 </td>
                     </tr>
                     <tr> 
-                        <th> Challenge Accepted </th>
-                        <th> Finish a study challenge </th>
-                        <th> 222 </th>
+                        <td> Quiz Whiz</td>
+                        <td> Score about 90% on three quizzes in a row </td>
+                        <td> 450 </td>
                     </tr>
                     <tr> 
-                        <th> Caffine Crusader </th>
-                        <th> Go for 10 study hours caffine-free  </th>
-                        <th> 100 </th>
+                        <td> Time Traveler</td>
+                        <td> Study for 100 hours </td>
+                        <td> 1000 </td>
                     </tr>
                 </table> 
+
+                <p style="font-size: small; text-align: right; font-style: italic;">
+                    Explore all to earn on our "My Achievements" tab. 
+                </p>
             </div>
 
             <div class="column">
                 <h1> How do I earn achievements? </h1>
-                <p> Studying can feel like a personal game where each task you 
+                <p style="padding-top: 40px;" style="padding-bottom: 30px;"> Studying can feel like a personal game where each task you 
                     complete earns you points toward your academic goals. Every time you hit 
                     a study milestone—whether it's finishing a chapter, acing a practice quiz, 
                     or completing a set of flashcards—you score points based on your effort and 
@@ -85,13 +91,15 @@
                     for mastering vocabulary. By turning your study habits into a point-based system, 
                     you create a fun and motivating way to visualize your accomplishments, pushing you 
                     to reach the next level of success!</p>
-                <a class="button"> See My Achievements</a>
+                <a class="button" style="margin-top: 20px;"> See My Achievements</a>
             </div>
         </div>
         <div class="column">
-            <div style="margin-top: 10px;"> 
+            <div style="padding-top: 20px;"> 
+
                 <h1> How do I keep my deadlines organized? </h1>
-                <p> Tracking tasks as a student is like having a trusty sidekick on 
+                <p style="padding-top: 30px;" style="padding-bottom: 30px;"> 
+                    Tracking tasks as a student is like having a trusty sidekick on 
                     your academic adventure! It keeps you organized, helps you dodge 
                     the dreaded deadline monster, and ensures you're always one step ahead.
                     Imagine checking off assignments like a pro—each tick feels like leveling 
@@ -100,10 +108,10 @@
                     little help from your task tracker, you can conquer projects, ace exams, 
                     and still have time for some fun. So grab that planner or app and start 
                     your quest to become the ultimate task-tracking hero! </p>
-                <a class="button" href="./TaskTracker.html"> See My Tasks</a>
+                <a class="button" style="margin-top: 20px;" href="./TaskTracker.html"> See My Tasks</a>
             </div>
         </div>
-        <img src="./badges.jpg" width="500" style="margin-left: 30px;">
+        <img src="./badges.jpg" width="450" style="margin-left: 60px;" style="padding-top: 40px;">
     </div>
 </body>
 </html>
