--- a/TaskTracker.html
+++ b/TaskTracker.html
@@ -13,8 +13,17 @@
         display of tasks, rows, tables, list
         name, course, due date, topic, short description/add your own note
         -->
-    <div >
+        
+    <!-- new header and navgation bar -->
+    <div class="header"> 
         <h1>Task Tracker</h1>
+        <p> Stay on top of your tasks!</p>
+    </div>
+
+    <div class="topnav">
+        <a href="./StudyStreak.html"> Go Home </a>
+        <a href="./Achievements.html" style="float: right"> My Achievements </a>
+        <!--a href="#"> Leaderboard </a-->
     </div>
 
     <table style="width:100%">
