creation of achievements table and css file

--- a/Achievements.html
+++ b/Achievements.html
@@ -27,6 +27,63 @@
             Create your own prizes and work towards them with points.
         </h3>
     </div>
+
+    <div style="margin-top: 30px;"> 
+
+        <h1> Collect Points. Earn Achievements. </h1>
+
+        <table id="pointsToAchievements"> 
+            <tr> 
+                <th> Achievements to Earn </th>
+                <th> Task to complete </th>
+                <th> Points to Collect </th>
+            </tr>
+            <tr> 
+                <td> Midnight Oil </td>
+                <td> Complete a nighttime study session </td>
+                <td> 12 </td>                        
+
+            </tr>
+            <tr> 
+                <td> Goal Getter </td>
+                <td> Set and acheive a weekly goal </td>
+                <td> 70 </td>
+            </tr>
+            <tr> 
+                <td> Caffine Crusader </td>
+                <td> Go for 10 study hours caffine-free  </td>
+                <td> 100 </td>
+
+            </tr>
+            <tr> 
+                <td> Challenge Accepted </td>
+                <td> Finish a study challenge </td>
+                <td> 222 </td>
+            </tr>
+            <tr> 
+                <td> Quiz Whiz</td>
+                <td> Score about 90% on three quizzes in a row </td>
+                <td> 450 </td>
+            </tr>
+            <tr> 
+                <td> Time Traveler</td>
+                <td> Study for 100 hours </td>
+                <td> 1000 </td>
+            </tr>
+        </table> 
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
     
 </body>
 </html>
