--- a/TaskTracker.html
+++ b/TaskTracker.html
@@ -72,7 +72,7 @@
 
 
         <tr>
-            <td>Alfreds Futterkiste</td>
+            <!-- <td>Alfreds Futterkiste</td>
             <td>Maria Anders</td>
             <td>Germany</td>
             <td>Mexico</td>
@@ -83,7 +83,7 @@
             <td>Francisco Chang</td>
             <td>Mexico</td>
             <td>Mexico</td>
-            <td>Mexico</td>
+            <td>Mexico</td> -->
           </tr>
     </table>
 
