--- a/TaskTracker.html
+++ b/TaskTracker.html
@@ -70,18 +70,19 @@
 
 
         <tr>
-            <!-- <td>Alfreds Futterkiste</td>
-            <td>Maria Anders</td>
-            <td>Germany</td>
-            <td>Mexico</td>
-            <td>Mexico</td>
+            <td>MACM 101</td>
+            <td>Homework 3</td>
+            <td>Oct. 15</td>
+            <td>Q3 ask prof</td>
+            <td>50%</td>
           </tr>
           <tr>
-            <td>Centro comercial Moctezuma</td>
-            <td>Francisco Chang</td>
-            <td>Mexico</td>
-            <td>Mexico</td>
-            <td>Mexico</td> -->
+            <td>MATH 232</td>
+            <td>Assignment 2</td>
+            <td>Oct. 20</td>
+            <td>Finish MatLab graph</td>
+            <td>20%</td>
+           
           </tr>
     </table>
 
